<resources>
    <string name="app_name">NChat</string>
    <string name="chat_list_title">Мои чаты</string>
    <string name="chat_join_text">тип чата: секретный</string>
    <string name="bottom_navigation_chat_menu">Мои чаты</string>
    <string name="bottom_navigation_chat_create">Создать чат</string>
    <string name="bottom_navigation_about">О приложении</string>
    <string name="about_app_title">О приложении</string>
    <string name="about_app_description">Приложение разработал студент 3его курса\nгруппы М8О-311Б-21\nАвдиянц Петр</string>
    <string name="about_app_description_title">Курсовой проект</string>
    <string name="create_chat_title">Создать чат</string>
    <string name="create_chat_enter_title">Введите название чата</string>
    <string name="create_chat_select_encryption">Выберите алгоритм шифрования</string>
    <string name="create_chat_button">Создать чат</string>
    <string name="create_chat_fill_chat_name">Укажите название чата:</string>
    <string name="create_chat_fill_chat_name_placeholder">Например, \"Чат по криптографии\"…</string>
    <string name="create_chat_fill_chat_cipher">Выберите алгоритм шифрования:</string>
    <string name="create_chat_select_chat_partner">Выберите собеседника:</string>
    <string-array name="create_chat_cipher_modes">
        <item>RC5 (по умолчанию)</item>
        <item>Magenta</item>
    </string-array>
    <string-array name="loading_clients">
        <item>Клиенты загружаются…</item>
    </string-array>
    <string name="create_chat_cipher_modes_default">RC5 (по умолчанию)</string>
    <string name="chat_enter_message_hint">Введите сообщение…</string>
    <string name="chat_resource_download"><u>скачать</u></string>
    <string name="no_clients_online">Нет клиентов в сети</string>
    <string name="failed_to_get_clients">Ошибка получения клиентов</string>
    <string name="refresh_symbol">⟳</string>
    <string name="clients_updating">Список клиентов обновлен</string>
    <string name="dialog_cancel_button">Отмена</string>
    <string name="dialog_finish_button">Ок</string>
    <string name="dialog_exit_button">Выход</string>
    <string name="chat_creation_failed_title">Ошибка!</string>
    <string name="chat_creation_failed_message">Не удается создать чат. Возможно, клиент, которого Вы выбрали уже не в сети. Попробуйте обновить список клиентов и повторите попытку.\n\nЭто также может произойти потому что сервер временно не доступен или возникли проблемы с интернетом…</string>
    <string name="dialog_enter_input_button">Ввод</string>
    <string name="enter_username_title">Введите имя на сессию</string>
    <string name="enter_username_message">Укажите имя, под которым Вас будут видеть другие пользователи во время текущей сессии. Указывемое имя временное и закрепляется за Вами только до тех пор, пока Вы не остановили приложение, после чего это имя сможет занять любой другой пользователь.</string>
    <string name="successful_initialization_title">Вы успешно авторизовались</string>
    <string name="successful_initialization_message">Внимание!\nСоздавайте чат с пользователем только, если Вы уверены в том, что в данный момент его ник именно тот, который Вы выбрали. Помните, что он не фиксирован и может измениться в любой момент.</string>
    <string name="client_initialization_failed">Не удалось выполнить инициализацию! Попробуйте еще раз.</string>
    <string name="initialization_in_progress_title">Выполняется инициализация</string>
    <string name="initialization_in_progress_message">Не покидайте приложение…</string>
    <string name="waiting_for_partner_answer">Ожидаем ответа собеседника…</string>
    <string name="failed_to_get_new_chats">Не удалось проверить наличие новых созданных чатов…</string>
    <string name="failed_to_add_new_chat">Не удалось оповестить собеседника о создании с ним чата…</string>
    <string name="failed_to_ping_new_chats">Не удалось получить информацию о созданных чатах. Мы попробуем это снова позже…</string>
    <string name="failed_to_get_secret_keys">Не удалось обеспечить безопасную передачу данных. Мы попробуем это снова позже…</string>
    <string name="name_not_available">Введенное Вами имя сейчас занято. Укажите другое или попробуйте позже…</string>
    <string name="chat_partner">Собеседник: %1$s</string>
    <string name="invalid_message">Сообщение должно содержать текст и не может состоять из одних пробелов</string>
    <string name="suffix_after_your_client_name"> (Вы)</string>
    <string name="chat_ended">Переписка прекращена!</string>
    <string name="chat_ended_reason">Вы больше не можете писать в этот чат</string>
    <string name="uploading_text">Загружаем…</string>
    <string name="cancel_uploading">Отменить операцию</string>
    <string name="cancel_downloading">Отменить операцию</string>
    <string name="downloading_text">Загружаем…</string>
    <string name="failed_to_send_message">Не удалось отправить сообщение. Попробуйте еще раз</string>
    <string name="failed_to_send_file">Не удалось отправить файл. Попробуйте еще раз</string>
    <string name="too_many_files_uploaded_title">Ого!</string>
    <string name="too_many_files_uploaded_text">Слишком много независимых файлов сейчас уже отправляются на сервер. Пожалуйста, подождите, пока отправится хотя бы один из них и повторите попытку.\n\nВы также можете сгруппировать все ваши файлы в архив и отправить за один раз…</string>
    <string name="are_you_sure_title">Вы уверены?</string>
    <string name="are_you_sure_text">Если выйти сейчас, то отправка всех еще не отправленных файлов будет прервана.</string>
    <string name="upload_cancelled">Сообщение не загружено</string>
    <string name="download_cancelled">Сообщение не загружено</string>
    <string name="failed_to_get_messages">Не удалось получить сообщения…</string>
    <string name="download_notification_title">Скачиваем "%1$s"</string>
    <string name="download_notification_text">Прогресс: %1$d%%</string>
    <string name="download_notification_title_on_load_end">Загрузка завершена!</string>
    <string name="download_notification_text_on_load_end">Файл "%1$s" сохранен в downloads/%2$s</string>
    <string name="file_already_downloaded_on_click">Файл с таким именем уже находится в папке downloads/nchat</string>
    <string name="file_download_failed_on_click">Не удалось загрузить файл!</string>
    <string name="exist_chat_dialog_title">Покинуть чат?</string>
    <string name="exist_chat_dialog_text">Если Вы покините чат сейчас, то больше никогда не сможете писать в нем.\n\nВаш собеседник также никогда больше не сможет писать Вам…</string>
</resources>
